added Factory and Fixed Split , change functions to Stream